# fastqc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: kmer_processor.rs  main.rs  process.rs
src/report/: base_per_pos_specs.json  counter_specs.json  gc_content_specs.json  read_lengths_specs.json  report.html.tera  sequence_quality_score_specs.json
tests/: lib.rs
