[package]
name = "peptide-reporter"
version = "0.2.3-alpha.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast quality control tool and peptide finder for FASTQ files"
repository = "https://github.com/evolvedmicrobe/fastqc-rs"
homepage = "https://fastqc-rs.github.io"
keywords = ["fastq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
lazy_static = "1"
memchr = "2.4.1"
needletail = "0.4.0"
protein-translate = "0.2.0"
reqwest = "0.9.0"
rustc-hash = "1.1.0"
serde_json = "1.0.62"
tera = "1.6.1"

[dev-dependencies]
itertools = "0.10.0"

[[bin]]
name = "pf"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
